# lispi

./: .dir-locals.el  .gitignore  Cargo.toml  jit.lispi  lispi.el  lispi.org  memory.ld  os.lispi  readme.org
.cargo/: config.toml
pi-side/: Cargo.toml  build.rs  copy.sh  output.S  upload.sh
pi-side/.cargo/: config.toml
pi-side/example/: jit_tests.rs  lisp_api.rs  thread_api.rs
pi-side/src/: main.rs  syscalls.rs  threading.rs
pi-side/src/boot/: entrypoint.rs  start.rs
pi-side/src/comm/: gpio.rs  mod.rs  print.rs  uart.rs
pi-side/src/language/: ast.rs  constants.rs  environment.rs  execute.rs  mod.rs  number.rs  parse.rs  special.rs  syscalls.rs
pi-side/src/language/jit/: encodings.rs  executor.rs  ir.rs  ir2.rs  ir3.rs  ir4.rs  jit.rs  jitted.rs  mod.rs  optimize.rs  optimize2.rs  optimize4.rs  regalloc.rs  scope.rs  specialize.rs
pi-side/src/utils/: bits.rs  cs.rs  memory.rs  panic.rs
shared/src/: lib.rs
src/: cs.rs  main.rs  syscalls.rs  threading.rs
src/boot/: entrypoint.rs  mod.rs  start.rs
src/comm/: mod.rs
src/language/: ast.rs  environment.rs  execute.rs  mod.rs  number.rs  parse.rs  special.rs  syscalls.rs
src/regs/: banked.rs  cpsr.rs  mod.rs
src/utils/: exceptions.rs  memory.rs  mod.rs  psr.rs  watchdog.rs
unix-side/: Cargo.toml
unix-side/src/: main.rs  tty.rs
