[package]
name = "lispi"
version = "0.1.0"
edition = "2024"

# Note: this exists to silence false positive errors when using an LSP or IDE
# `name` needs to be the same as `package.name`
[[bin]]
name = "crab-pi"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
heapless = "0.9.2"
bytemuck = "1.25.0"
embedded-alloc = "0.7.0"
critical-section = { version = "1.1", default-features = false, features = ["restore-state-u32"] }
proc-bitfield = "0.5.3"